@@ -1,1 +1,0 @@
-INSTALL(DIRECTORY generic DESTINATION var/sniffjoke)
