@@ -23,7 +23,7 @@
 #include "Debug.h"
 
 Debug::Debug(void) :
-debuglevel(DEBUG_LEVEL),
+debuglevel(ALL_LEVEL),
 logstream(stdout),
 session_logstream(stdout),
 packet_logstream(stdout)
